--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuemmerce",
   "version": "0.9.3",
-  "description": "Responsive ecommerce template built with Vue.js and Nuxt.js",
+  "description": "Food street",
   "author": "ivan lori <ivan.lori@protonmail.com>",
   "scripts": {
     "dev": "nuxt",
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@nuxtjs/font-awesome": "^1.0.4",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.5",
