--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.5",
     "nuxt": "^2.8.1",
+    "uuid": "^7.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.1"
@@ -41,6 +42,7 @@
     "@vue/cli-service": "~3.9.3",
     "babel-plugin-transform-runtime": "~6.23.0",
     "node-sass": "^4.13.1",
+    "progress-tracker": "^2.0.6",
     "sass-loader": "~7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
