--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-runtime": "^6.26.0",
     "bulma": "^0.7.5",
     "nuxt": "^2.8.1",
+    "socket.io-client": "^2.3.0",
     "uuid": "^7.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
